# 2026sp-420-Notavirus.exe

./: .coverage  .gitignore  LICENSE  Project Management Sprint 1.docx  README.md  Schedule Table - Sprint 1.xlsx  Schedule.json  conflict.py  course.py  example-3.json  example-3.json.temp  example-6.json  example-7.json  example.json  example.json.temp  example3.json  examples.json  faculty.py  lab.py  main.py  ourScheduler.py  out3.txt  outputFile.csv  pyproject.toml  room.py  safe_save.py  scheduler_configuration-3.json  scheduler_facade.py  schedules.csv  schedules.json  tempconfliGUI  test2.csv  testConfig copy.json  testConfig.json  testSchedules.json  test_course.py  test_display.py  test_lab.py  test_ourScheduler.py  theme_updater.py  (+1 more)
.github/: CODEOWNERS
2026sp_420_notavirus_exe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
controllers/: app_controller.py  chatbot_controller.py  conflict_controller.py  course_controller.py  faculty_controller.py  lab_controller.py  room_controller.py  schedule_controller.py  scheduler_controller.py  undoRedo_controller.py
models/: config_model.py  conflict_model.py  course_model.py  faculty_model.py  lab_model.py  room_model.py  scheduler_model.py
oldcode/: conflict.py  course.py  faculty.py  lab.py  ourScheduler.py  room.py
tests/: __init__.py  conftest.py  test_add_conflict.py  test_conflict.py  test_data_class.py  test_delete_faculty.py  test_deleteconflict.py  test_deletecourse.py  test_display_csv.py  test_duplicate_conflict_logic.py  test_faculty.py  test_lab.py  test_safe_save.py  (+6 more)
(+52 files in other folders)
