[project]
name = "2026sp-420-notavirus-exe"
version = "0.1.0"
description = "Feature extension for Scheduler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "course-constraint-scheduler>=2.6.1",
    "nicegui>=3.2.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]
[dependency-groups]
dev = [
    "iniconfig>=2.3.0",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=models --cov=controllers --cov-report=term-missing"


[tool.ty.src]
exclude = ["oldcode"]

[tool.coverage.run]
source = ["controllers", "models"]

[tool.coverage.report]
show_missing = true
